--- a/src/main/resources/view/InfoWindow.fxml
+++ b/src/main/resources/view/InfoWindow.fxml
@@ -19,17 +19,17 @@
             <children>
                <Label fx:id="commandWord" contentDisplay="CENTER" text="Label" textAlignment="CENTER" textFill="WHITE" VBox.vgrow="ALWAYS">
                   <font>
-                     <Font name="Arial Black" size="52.0" />
+                     <Font name="Franklin Gothic Heavy" size="52.0" />
                   </font>
                </Label>
                     <Label fx:id="infoMessage" text="Label" textFill="WHITE">
                   <font>
-                     <Font name="Bookshelf Symbol 7" size="20.0" />
+                     <Font name="Franklin Gothic Demi Cond" size="20.0" />
                   </font>
                     </Label>
                <Label text="USAGE :" textFill="WHITE">
                   <font>
-                     <Font name="Arial Black" size="25.0" />
+                     <Font name="Franklin Gothic Heavy" size="25.0" />
                   </font>
                </Label>
                <Label fx:id="usageExample" text="Label" textFill="WHITE">
@@ -39,7 +39,7 @@
                </Label>
                <Label text="EXPECTED OUTPUT :" textFill="WHITE">
                   <font>
-                     <Font name="Arial Black" size="25.0" />
+                     <Font name="Franklin Gothic Heavy" size="25.0" />
                   </font>
                </Label>
                <Label fx:id="output" text="Label" textFill="WHITE">
@@ -49,7 +49,7 @@
                </Label>
                <Button mnemonicParsing="false" onAction="#closeWindow" text="Close">
                   <font>
-                     <Font name="Arial Black" size="36.0" />
+                     <Font name="Franklin Gothic Demi Cond" size="36.0" />
                   </font>
                   <VBox.margin>
                      <Insets top="20.0" />
