--- a/src/main/resources/view/TemplateItemPanel.fxml
+++ b/src/main/resources/view/TemplateItemPanel.fxml
@@ -3,6 +3,8 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.control.Label?>
 <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+  <Label fx:id="name" text="\$name" styleClass="template-item-display" />
   <ListView fx:id="templateItemView" VBox.vgrow="ALWAYS" />
 </VBox>
