--- a/src/main/resources/view/Cashier.fxml
+++ b/src/main/resources/view/Cashier.fxml
@@ -1,19 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="cashier" prefHeight="532.0" prefWidth="690.0" stylesheets="@Extensions.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-      <TableView fx:id="tableView" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <columns>
-          <TableColumn fx:id="idCol" prefWidth="60.0" text="No." />
-          <TableColumn fx:id="descriptionCol" prefWidth="330.0" text="Item Description" />
-            <TableColumn fx:id="priceCol" text="Price" />
-            <TableColumn fx:id="quantityCol" text="Quantity" />
-            <TableColumn fx:id="subtotalCol" prefWidth="120.0" text="Subtotal" />
-        </columns>
-      </TableView>
+      <GridPane prefHeight="532.0" prefWidth="690.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="519.0" minHeight="10.0" prefHeight="504.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="261.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <TableView fx:id="tableView">
+              <columns>
+                <TableColumn fx:id="idCol" prefWidth="60.0" text="No." />
+                <TableColumn fx:id="descriptionCol" prefWidth="330.0" text="Item Description" />
+                  <TableColumn fx:id="priceCol" text="Price" />
+                  <TableColumn fx:id="quantityCol" text="Quantity" />
+                  <TableColumn fx:id="subtotalCol" prefWidth="120.0" text="Subtotal" />
+              </columns>
+            </TableView>
+            <Label text="Total amount:" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets left="20.0" />
+               </GridPane.margin>
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <Label text="Cashier:" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets left="400.0" />
+               </GridPane.margin>
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
