--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -49,7 +49,7 @@
                 <RowConstraints vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <TabPane fx:id="tabPane" tabClosingPolicy="UNAVAILABLE">
+                  <TabPane fx:id="tabPane" stylesheets="@DarkTheme.css" tabClosingPolicy="UNAVAILABLE">
                     <tabs>
                       <Tab id="homeTab" fx:id="homeTab" text="Home">
                         <content>
@@ -134,10 +134,6 @@
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
-                     <stylesheets>
-                        <URL value="@DarkTheme.css" />
-                        <URL value="@Extensions.css" />
-                     </stylesheets>
                   </TabPane>
                   <VBox fx:id="lionPlaceholder" GridPane.columnIndex="1">
                      <stylesheets>
