--- a/src/main/resources/view/DashboardListCard.fxml
+++ b/src/main/resources/view/DashboardListCard.fxml
@@ -1,33 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
 <HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-    <GridPane HBox.hgrow="ALWAYS">
-        <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
-        </columnConstraints>
-        <VBox alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
-            <padding>
-                <Insets top="5" right="5" bottom="5" left="15" />
-            </padding>
-            <HBox spacing="5" alignment="CENTER_LEFT">
-                <Label fx:id="id" styleClass="cell_big_label">
-                    <minWidth>
-                        <!-- Ensures that the label text is never truncated -->
-                        <Region fx:constant="USE_PREF_SIZE" />
-                    </minWidth>
-                </Label>
-                <Label fx:id="dashboardName" text="\$first" styleClass="cell_big_label" />
-            </HBox>
-            <FlowPane fx:id="pages" />
-        </VBox>
-    </GridPane>
+   <children>
+       <GridPane HBox.hgrow="ALWAYS">
+           <columnConstraints>
+               <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
+           </columnConstraints>
+          <children>
+              <VBox alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
+                  <padding>
+                      <Insets bottom="5" left="15" right="5" top="5" />
+                  </padding>
+                 <children>
+                     <HBox alignment="CENTER_LEFT" spacing="5">
+                        <children>
+                            <Label fx:id="id" styleClass="cell_big_label">
+                                <minWidth>
+                                    <!-- Ensures that the label text is never truncated -->
+                                    <Region fx:constant="USE_PREF_SIZE" />
+                                </minWidth>
+                            </Label>
+                            <Label fx:id="dashboardName" styleClass="cell_big_label" text="\$first" />
+                        </children>
+                     </HBox>
+                     <VBox fx:id="ingredients">
+                         <opaqueInsets>
+                             <Insets />
+                         </opaqueInsets>
+                         <VBox.margin>
+                             <Insets left="10.0" />
+                         </VBox.margin>
+                  </VBox>
+                 </children>
+              </VBox>
+          </children>
+           <rowConstraints>
+               <RowConstraints />
+           </rowConstraints>
+       </GridPane>
+   </children>
 </HBox>
