--- a/src/main/resources/view/DashboardWindow.fxml
+++ b/src/main/resources/view/DashboardWindow.fxml
@@ -115,24 +115,21 @@
 
                         <VBox>
                             <children>
-
                                 <StackPane fx:id="commandBoxPlaceholder" styleClass="pane-with-border">
                                     <padding>
                                         <Insets bottom="5" left="10" right="10" top="5" />
                                     </padding>
                                 </StackPane>
-
                                 <StackPane fx:id="resultDisplayPlaceholder" maxHeight="100.0" minHeight="100" prefHeight="100.0" styleClass="pane-with-border">
                                     <padding>
                                         <Insets bottom="5" left="10" right="10" top="5" />
                                     </padding>
                                 </StackPane>
-
-                                <VBox fx:id="personList" minWidth="340" prefWidth="340" styleClass="pane-with-border">
+                                <VBox fx:id="recipeList" minWidth="340" prefWidth="340" styleClass="pane-with-border">
                                     <padding>
                                         <Insets bottom="10" left="10" right="10" top="10" />
                                     </padding>
-                                    <StackPane fx:id="versatilePanelPlaceholder" VBox.vgrow="ALWAYS" />
+                                    <StackPane fx:id="recipeListPanelPlaceholder" VBox.vgrow="ALWAYS" />
                                 </VBox>
                             </children>
                         </VBox>
