Update UI of details tab

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -43,7 +43,6 @@
 
 .tab-pane .tab {
     -fx-background-color: #e6e6e6;
-
 }
 
 .tab-pane .tab:selected {
@@ -328,6 +327,10 @@
 
 .scroll-bar:horizontal .increment-arrow, .scroll-bar:horizontal .decrement-arrow {
     -fx-padding: 8 1 8 1;
+}
+
+.scroll-pane > .viewport {
+    -fx-background-color: #383838;
 }
 
 #cardPane {
