Migrate Reports UI to new window

--- a/src/main/resources/view/StatisticsCard.fxml
+++ b/src/main/resources/view/StatisticsCard.fxml
@@ -3,43 +3,38 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<?import javafx.scene.text.Text?>
 <?import javafx.scene.chart.PieChart?>
 
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.text.Text?>
 <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-    <BorderPane xmlns:fx="http://javafx.com/fxml"
-                prefHeight="800" prefWidth="400">
-        <top>
-            <Text text="Statistics" styleClass="cell_big_label" textAlignment="CENTER"/>
-        </top>
 
-        <center>
-            <VBox alignment="CENTER_LEFT" minHeight="105">
-                <PieChart fx:id="distributionChart" minHeight="300" minWidth="300" prefWidth="300" prefHeight="300"/>
-            </VBox>
-            <VBox alignment="CENTER_LEFT" minHeight="105">
-                <LineChart fx:id="lineChart" minHeight="300" minWidth="300" prefWidth="300" prefHeight="300">
-                    <xAxis>
-                        <NumberAxis side="BOTTOM" label="Num Students" />
-                    </xAxis>
-                    <yAxis>
-                        <NumberAxis layoutX="10.0" side="LEFT" label="Score" />
-                    </yAxis>
-                </LineChart>
-            </VBox>
-        </center>
+    <HBox alignment="TOP_CENTER">
+        <Text text="sfdasdasdas"/>
+    </HBox>
 
-        <right>
-            <VBox>
-                <Label fx:id="totalStudents" text="\$first" styleClass="cell_small_label" />
-                <Label fx:id="mean" text="\$first" styleClass="cell_small_label" />
-                <Label fx:id="median" text="\$first" styleClass="cell_small_label" />
-            </VBox>
-        </right>
+    <HBox alignment="BOTTOM_CENTER">
+        <VBox alignment="CENTER_LEFT" minHeight="105">
+            <PieChart fx:id="distributionChart" minHeight="300" minWidth="300" prefWidth="300" prefHeight="300"/>
+        </VBox>
 
-    </BorderPane>
+        <VBox alignment="CENTER_RIGHT" minHeight="105">
+            <LineChart fx:id="lineChart" minHeight="300" minWidth="300" prefWidth="300" prefHeight="300">
+                <xAxis>
+                    <NumberAxis side="BOTTOM" label="Num Students" />
+                </xAxis>
+                <yAxis>
+                    <NumberAxis layoutX="10.0" side="LEFT" label="Score" />
+                </yAxis>
+            </LineChart>
+        </VBox>
+    </HBox>
 
+    <VBox>
+        <Label fx:id="totalStudents" text="\$first" styleClass="cell_small_label" />
+        <Label fx:id="mean" text="\$first" styleClass="cell_small_label" />
+        <Label fx:id="median" text="\$first" styleClass="cell_small_label" />
+    </VBox>
 </VBox>
 
