--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -40,25 +40,26 @@
           </padding>		   
         </StackPane>
 		
-		<StackPane VBox.vgrow="NEVER" fx:id="editingRestaurantPlaceholder"  prefHeight="0" styleClass="pane-with-border">
+		<StackPane VBox.vgrow="NEVER" fx:id="editingRestaurantPlaceholder" minHeight="0" styleClass="pane-with-border">
 		  <padding>
             <Insets top="10" right="10" bottom="0" left="10" />
           </padding>
         </StackPane>
 		
-		<SplitPane id="splitPane" fx:id="splitPane" dividerPositions="1" VBox.vgrow="ALWAYS">
+		<SplitPane id="splitPane" fx:id="splitPane" dividerPositions="1" VBox.vgrow="ALWAYS" styleClass="pane-with-border">
           <VBox fx:id="personList" minWidth="340" prefWidth="340" SplitPane.resizableWithParent="false">
             <padding>
               <Insets top="10" right="10" bottom="10" left="10" />
             </padding>
             <StackPane fx:id="listPanelPlaceholder" VBox.vgrow="ALWAYS"/>
           </VBox>
-
-          <StackPane fx:id="statisticsPlaceholder" minWidth="0">
-            <padding>
+		  
+		  <StackPane VBox.vgrow="NEVER" fx:id="statisticsPlaceholder" styleClass="stack-pane"
+                     minHeight="300" prefHeight="300" maxHeight="300">
+		    <padding>
               <Insets top="10" right="10" bottom="10" left="10" />
-            </padding>
-          </StackPane>
+            </padding>		   
+		  </StackPane>
         </SplitPane>
 		
 		<StackPane VBox.vgrow="NEVER" fx:id="commandBoxPlaceholder" styleClass="pane-with-border">
