--- a/src/main/resources/view/StatisticsCard.fxml
+++ b/src/main/resources/view/StatisticsCard.fxml
@@ -7,34 +7,40 @@
 
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.chart.LineChart?>
-<?import javafx.scene.text.Text?>
+<?import javafx.geometry.Insets?>
 <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
 
     <HBox alignment="TOP_CENTER">
-        <Text text="sfdasdasdas"/>
-    </HBox>
-
-    <HBox alignment="BOTTOM_CENTER">
-        <VBox alignment="CENTER_LEFT" minHeight="105">
-            <PieChart fx:id="distributionChart" minHeight="300" minWidth="300" prefWidth="300" prefHeight="300"/>
-        </VBox>
-
         <VBox alignment="CENTER_RIGHT" minHeight="105">
-            <LineChart fx:id="lineChart" minHeight="300" minWidth="300" prefWidth="300" prefHeight="300">
+            <padding><Insets top="25" right="300" bottom="25" left="25"/></padding>
+            <LineChart fx:id="lineChart" VBox.vgrow="ALWAYS" minHeight="300" minWidth="400">
                 <xAxis>
-                    <NumberAxis side="BOTTOM" label="Num Students" />
+                    <NumberAxis side="BOTTOM" label="Num Students" autoRanging="true"/>
                 </xAxis>
                 <yAxis>
-                    <NumberAxis layoutX="10.0" side="LEFT" label="Score" />
+                    <NumberAxis side="LEFT" label="Score" autoRanging="true"/>
                 </yAxis>
             </LineChart>
         </VBox>
+
+        <VBox>
+            <padding><Insets top="100" right="50" bottom="25" left="25"/></padding>
+            <Label fx:id="totalStudents" text="\$first" styleClass="cell_small_label" />
+            <Label fx:id="mean" text="\$first" styleClass="cell_big_label" />
+            <Label fx:id="median" text="\$first" styleClass="cell_big_label" />
+            <Label fx:id="min" text="\$first" styleClass="cell_big_label" />
+            <Label fx:id="max" text="\$first" styleClass="cell_big_label" />
+            <Label fx:id="standardDev" text="\$first" styleClass="cell_big_label" />
+        </VBox>
+
     </HBox>
 
-    <VBox>
-        <Label fx:id="totalStudents" text="\$first" styleClass="cell_small_label" />
-        <Label fx:id="mean" text="\$first" styleClass="cell_small_label" />
-        <Label fx:id="median" text="\$first" styleClass="cell_small_label" />
-    </VBox>
+    <HBox alignment="BOTTOM_CENTER">
+        <padding><Insets top="25" right="25" bottom="25" left="25"/></padding>
+        <VBox alignment="CENTER_LEFT" minHeight="105">
+            <PieChart fx:id="distributionChart" VBox.vgrow="ALWAYS" minHeight="300" minWidth="300"/>
+        </VBox>
+    </HBox>
+
 </VBox>
 
