--- a/src/main/resources/view/SpendingListCard.fxml
+++ b/src/main/resources/view/SpendingListCard.fxml
@@ -16,21 +16,26 @@
     </columnConstraints>
     <VBox alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
       <padding>
-        <Insets top="5" right="5" bottom="5" left="15" />
+        <Insets bottom="5" left="15" right="5" top="5" />
       </padding>
-      <HBox spacing="5" alignment="CENTER_LEFT">
+      <HBox alignment="CENTER_LEFT" spacing="5">
         <Label fx:id="id" styleClass="cell_big_label">
           <minWidth>
             <!-- Ensures that the label text is never truncated -->
             <Region fx:constant="USE_PREF_SIZE" />
           </minWidth>
         </Label>
-        <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
+        <Label fx:id="name" styleClass="cell_big_label" text="\$first" />
       </HBox>
       <FlowPane fx:id="tags" />
-      <Label fx:id="cost" styleClass="cell_small_label" text="\$cost" />
       <Label fx:id="date" styleClass="cell_small_label" text="\$date" />
       <Label fx:id="remark" styleClass="cell_small_label" text="\$remark" />
     </VBox>
+      <VBox alignment="CENTER_RIGHT" minHeight="105" GridPane.columnIndex="1">
+         <Label fx:id="cost" styleClass="cell_big_label" text="\$cost" />
+         <padding>
+            <Insets right="25.0" />
+         </padding>
+      </VBox>
   </GridPane>
 </HBox>
