--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -331,6 +331,11 @@
 
 .scroll-pane > .viewport {
     -fx-background-color: #383838;
+    -fx-control-inner-background: #383838;
+}
+
+.scroll-pane-text {
+    -fx-text-fill: #e9e9e9;
 }
 
 #cardPane {
