--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -1,60 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.net.URL?>
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.Scene?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.image.Image?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.stage.Stage?>
 
-<fx:root type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-         title="Address App" minWidth="450" minHeight="600" onCloseRequest="#handleExit">
-  <icons>
-    <Image url="@/images/address_book_32.png" />
-  </icons>
-  <scene>
-    <Scene>
-      <stylesheets>
-        <URL value="@DarkTheme.css" />
-        <URL value="@Extensions.css" />
-      </stylesheets>
-
-      <VBox>
-        <MenuBar fx:id="menuBar" VBox.vgrow="NEVER">
-          <Menu mnemonicParsing="false" text="File">
-            <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit" />
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Help" />
-          </Menu>
-        </MenuBar>
-
-        <StackPane VBox.vgrow="NEVER" fx:id="commandBoxPlaceholder" styleClass="pane-with-border">
-          <padding>
-            <Insets top="5" right="10" bottom="5" left="10" />
-          </padding>
-        </StackPane>
-
-        <StackPane VBox.vgrow="NEVER" fx:id="resultDisplayPlaceholder" styleClass="pane-with-border"
-                   minHeight="100" prefHeight="100" maxHeight="100">
-          <padding>
-            <Insets top="5" right="10" bottom="5" left="10" />
-          </padding>
-        </StackPane>
-
-        <VBox fx:id="flashcardList" styleClass="pane-with-border" minWidth="340" prefWidth="340" VBox.vgrow="ALWAYS">
-          <padding>
-            <Insets top="10" right="10" bottom="10" left="10" />
-          </padding>
-          <StackPane fx:id="flashcardListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
-        </VBox>
-
-        <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
-      </VBox>
-    </Scene>
-  </scene>
+<fx:root maxHeight="520.0" maxWidth="1500.0" minHeight="510.0" minWidth="1000.0" resizable="false" title="FlashMind" type="Stage" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+    <scene>
+        <Scene>
+         <HBox maxHeight="500.0" maxWidth="700.0" minHeight="420.0" minWidth="400.0" prefHeight="683.0" prefWidth="400.0">
+            <children>
+               <VBox>
+                  <children>
+                     <MenuBar fx:id="MenuBar">
+                       <menus>
+                         <Menu mnemonicParsing="false" text="Action">
+                           <items>
+                             <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Close" />
+                           </items>
+                         </Menu>
+                         <Menu mnemonicParsing="false" text="Help">
+                           <items>
+                             <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Show Help" />
+                           </items>
+                         </Menu>
+                       </menus>
+                     </MenuBar>
+                     <StackPane fx:id="commandBoxPlaceholder" styleClass="pane-with-border" />
+                     <StackPane fx:id="resultDisplayPlaceholder" minHeight="220.0" minWidth="200.0" styleClass="pane-with-border" />
+                     <HBox>
+                        <children>
+                           <StackPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="217.0" minWidth="250.0" prefHeight="217.0" prefWidth="109.0" styleClass="pane-with-border">
+                              <children>
+                                 <LineChart prefHeight="166.0" prefWidth="248.0">
+                                   <xAxis>
+                                     <CategoryAxis side="BOTTOM" />
+                                   </xAxis>
+                                   <yAxis>
+                                     <NumberAxis side="LEFT" />
+                                   </yAxis>
+                                 </LineChart>
+                              </children>
+                           </StackPane>
+                           <StackPane minWidth="250.0" prefHeight="217.0" prefWidth="111.0" styleClass="pane-with-border">
+                              <children>
+                                 <PieChart />
+                              </children>
+                           </StackPane>
+                        </children>
+                     </HBox>
+                  </children>
+               </VBox>
+               <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="800.0" minWidth="500.0" styleClass="pane-with-border-2">
+                  <children>
+                     <StackPane fx:id="flashcardListPanelPlaceholder" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="503.0" minWidth="500.0" prefHeight="503.0" prefWidth="203.0" styleClass="pane-with-border-2" />
+                  </children>
+               </VBox>
+            </children>
+         </HBox>
+         <stylesheets>
+            <URL value="@DarkTheme.css" />
+            <URL value="@Extensions.css" />
+         </stylesheets>
+        </Scene>
+    </scene>
 </fx:root>
